<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InfoName"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/QuestionRiver"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/river"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:freezesText="true"
            android:gravity="start"
            android:hint="@string/InfoRiver"
            android:inputType="textCapWords|textImeMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/QuestionContinents"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/conti_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nr5" />

            <RadioButton
                android:id="@+id/conti_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nr7" />

            <RadioButton
                android:id="@+id/conti_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nr9" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/QuestionMap"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AnswerUp" />

            <RadioButton
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AnswerLeft" />

            <RadioButton
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AnswerRight" />

            <RadioButton
                android:id="@+id/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AnswerDown" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/QuestionCity"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/townBucharest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Town1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/townVlad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Town2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/townParis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/Space24dp"
            android:text="@string/Town3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/townCairo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/Space24dp"
            android:text="@string/Town4"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:onClick="submitButton"
                android:text="@string/submit"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:onClick="sendButton"
                android:text="@string/send"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetButton"
                android:text="@string/reset"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/result"
            android:textAllCaps="true" />
    </LinearLayout>


</ScrollView>
